k8s-demo/deploy/template/k8s-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-demo-ingress
  namespace: default
spec:
  rules:
    - host: harry.web.com
      http:
        paths:
          - backend:
              serviceName: k8s-demo-service
              servicePort: 80
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: k8s-demo-app
  name: k8s-demo-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: k8s-demo-app
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: k8s-demo-app
  name: k8s-demo-app
  namespace: default
spec:
  replicas: 2
  revisionHistoryLimit: 15
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: k8s-demo-app
  template:
    metadata:
      labels:
        app: k8s-demo-app
    spec:
      #hostNetwork: true
      terminationGracePeriodSeconds: 60
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      containers:
        - name: k8s-demo
          image: harbor.harry.com:8015/harry/k8s-demo:v1.0.0
          ports:
            - containerPort: 8080
              protocol: TCP
